--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -32,6 +32,17 @@ jobs:
           restore-keys: |
             Library-
 
+      - name: Free disk space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          swap-storage: true
+
+
       - name: Setup Android SDK  	#New VC
         uses: android-actions/setup-android@v3
 
