--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -47,6 +47,27 @@ jobs:
           fi
           echo "UNITY_LICENSE is present (non-empty)"
 
+      - name: Check Unity secrets presence (email/password/license)
+        shell: bash
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+        run: |
+          if [ -z "$UNITY_LICENSE" ]; then echo "UNITY_LICENSE missing/empty"; exit 1; fi
+          if [ -z "$UNITY_EMAIL" ]; then echo "UNITY_EMAIL missing/empty"; exit 1; fi
+          if [ -z "$UNITY_PASSWORD" ]; then echo "UNITY_PASSWORD missing/empty"; exit 1; fi
+          echo "All Unity secrets are present (non-empty)."
+
+      - name: Write Unity license file
+        shell: bash
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        run: |
+          mkdir -p unity-license
+          echo "$UNITY_LICENSE" > unity-license/Unity.ulf
+          echo "License file written."
+
       - name: Build Unity (Android)
         uses: game-ci/unity-builder@v4
         env:
